// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="multilist"
  style={Object {}}
>
  <div
    className="topBar"
    onClick={[Function]}
  >
    <div
      className="name"
    />
    <div
      className="v"
    >
      ⌄
    </div>
  </div>
  <div
    className="collapse"
    style={Object {}}
  />
</div>
`;

exports[`renders correctly with more options 1`] = `
<div
  className="multilist"
  style={Object {}}
>
  <div
    className="topBar"
    onClick={[Function]}
  >
    <div
      className="name"
    >
      Contient une image
    </div>
    <div
      className="v"
    >
      ⌄
    </div>
  </div>
  <div
    className="collapse"
    style={Object {}}
  />
</div>
`;
